# quantized-interactions

./: .gitignore  Cargo.toml  LICENSE  README.md
data/tmp/: README.md
src/: cell.rs  conway.rs  experiment.rs  lib.rs  main.rs  patch.rs  patch_poc.rs  structure.rs  torus.rs  wave.rs
src/cell/: mod.rs  torus.rs
src/patch/: mod.rs  poc.rs  torus.rs
src/patch/torus/: grayscale.rs  info.rs  mod.rs
src/torus/: grayscale.rs  mod.rs  utils.rs
